Implemented data trends
